tests/compiler/undefinedTypeAssignment2/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.3/tests/cases/compiler/undefinedTypeAssignment2.ts`, Apache-2.0 License

var undefined = void 0;
//~^ ERROR: Declaration name conflicts with built-in global identifier 'undefined'.
